Fix contrast ratio on Twitch button; add font preloading

--- a/_src/assets/scss/components/_buttons.scss
+++ b/_src/assets/scss/components/_buttons.scss
@@ -5,7 +5,7 @@
   grid-template-columns: auto 1fr;
   gap: $spacing-4;
   align-items: center;
-  color: inherit;
+  color: $color-white;
   text-decoration: none;
   font-size: $text-large-font-size;
   font-weight: $font-weight-bold;
